# moonlink

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile.amd64  LICENSE  README.md  deny.toml  pg_mooncake.control
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  ci_typos.yml  community_auto_label.yml
deploy/kind/config/: moonlink_nginx_config.yaml
deploy/kind/deployment/: moonlink_deployment.yaml
deploy/kind/service/: moonlink_service.yaml
rust/moonlink/: Cargo.toml
rust/moonlink/src/: error.rs  main.rs  sink.rs  storage.rs
rust/moonlink_connectors/src/: lib.rs
rust/pg_mooncake_test_fn/src/: lib.rs
rust/pg_moonlink_test/: Cargo.toml
rust/pg_moonlink_test/src/: main.rs
scripts/: fetch_rust_deps.sh  parse_ingest_metrics.py  restart_moonlink.sh
src/: lib.rs
src/moonlink/: Cargo.toml
src/moonlink/benches/: bench_write.rs  microbench_write_mooncake_table.rs
src/moonlink/src/: error.rs  event_sync.rs  lib.rs  row.rs  storage.rs  table_handler.rs  table_notify.rs  union_read.rs
src/moonlink_backend/: Cargo.toml
src/moonlink_backend/src/: error.rs  lib.rs  table_config.rs
src/moonlink_backend/tests/: common.rs  test_backend.rs  test_drop.rs  test_initial_copy.rs  test_postgres_source.rs  test_replication_client.rs  test_replication_recovery.rs
src/moonlink_connectors/: Cargo.toml
src/moonlink_connectors/src/: error.rs  lib.rs  pg_replicate.rs  replication_connection.rs  replication_manager.rs  replication_state.rs  rest_ingest.rs
src/moonlink_datafusion/: Cargo.toml
src/moonlink_datafusion/src/: catalog_provider.rs  connection_pool.rs  error.rs  lib.rs  main.rs  schema_provider.rs  table_metadata.rs  table_provider.rs
src/moonlink_error/: Cargo.toml
src/moonlink_error/src/: error.rs
src/moonlink_metadata_store/: Cargo.toml
src/moonlink_metadata_store/src/: config_utils.rs  error.rs  test_utils.rs
src/moonlink_metadata_store/tests/: test_pg_metadata_store.rs
src/moonlink_proto/: Cargo.toml  build.rs
src/moonlink_proto/proto/: row.proto
src/moonlink_proto/src/: lib.rs
src/moonlink_rpc/: Cargo.toml  build.rs
src/moonlink_rpc/proto/: rpc.proto
src/moonlink_rpc/src/: error.rs  lib.rs
src/moonlink_service/: Cargo.toml  moonlink-api.yaml
src/moonlink_service/examples/: rest_api_demo.rs
(+146 files in other folders)
