[package]
name = "moonlink_rpc"
version = { workspace = true }
edition = { workspace = true }
license = "MIT"

[dependencies]
bincode = { workspace = true }
moonlink = { path = "../moonlink" }
paste = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
